# Arm-Pi-Tweaker-LCCE

./: README.md
Tweaker-Gui/: CMakeLists.txt  README.md  build.sh  gpumanager.cpp  kernelmanager.cpp  kernelmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  package-lock.json  systemmanager.cpp  upgradewidget.cpp  upgradewidget.h
gpu/docs/: README.md
